# asibot-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.dev.yml  docker-compose.ha.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: asibot.service  backup-restore.md  backup.sh  nginx.conf  pgbouncer-userlist.txt  pgbouncer.ini  postgres-init-replication.sh  runbook.md
deploy/alertmanager/: alertmanager.yml
deploy/grafana/: asibot-dashboard.json
deploy/k8s/: asibot-deployment.yaml  asibot-service.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  pgbouncer-deployment.yaml  postgres-statefulset.yaml  secrets.yaml
deploy/prometheus/: alerts.yml  postgres-alerts.yml  prometheus.yml
docs/: adding-connectors.md  configuration.md
src/asibot/: analytics.py  audit.py  auth.py  circuit_breaker.py  config.py  crypto.py  dashboard.py  dashboard_tokens.py  db.py  db_postgres.py  distributed_cache.py  http_pool.py  metrics.py  migrate.py  roles.py  server.py  session_store.py  stdio_server.py  token_store.py  user_session.py  validation.py
tests/: load_test.py  test_analytics.py  test_audit.py  test_auth.py  test_chaos.py  test_config_validation.py  test_connector_tools.py  test_connectors.py  test_crypto.py  test_dashboard.py  test_dashboard_tokens.py  test_db_transactions.py  test_distributed_cache.py  test_ingest.py  test_metrics.py  test_ms365_connectors.py  test_niche_connectors.py  test_pagination.py  test_rbac.py  test_role_sync.py  test_security_fixes.py  test_server.py  test_session_store.py  test_standard_connectors.py  test_token_store.py  test_user_session.py  test_validation.py
tests/integration/: conftest.py  test_db_integration.py
tests/load/: README.md  docker-compose.loadtest.yml  (+3 more)
(+44 files in other folders)
