[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asibot"
version = "0.1.0"
description = "Enterprise connector agent via MCP"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0,<2",
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.3.0,<3",
    "httpx>=0.27.0,<1",
    "cryptography>=42.0.0,<44",
    "aiosqlite>=0.20.0,<1",
]

[project.optional-dependencies]
redis = [
    "redis[hiredis]>=5.0.0,<6",
]
postgres = [
    "asyncpg>=0.29.0,<1",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
asibot = "asibot.server:main"
asibot-stdio = "asibot.stdio_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
